--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>CAR STOLEN REPORT SYSTEM</h1>
     <a href="index.php" class="button">Home</a>
     <a href="about.php" class="button">About Us</a>
-    <a href="login.php" class="button">Login</a>
+    <a href="login.html" class="button">Login</a>
     <a href="registration.php" class="button">Register</a>
 </div>
 
