--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
             if ($user['role'] === 'admin') {
                 header("Location: admin_dashboard.php");
             } else {
-                header("Location: user_dashboard.php");
+                header("Location: user_dashboard.html");
             }
             exit();
         } else {
